--- a/R_notes.html
+++ b/R_notes.html
@@ -69,10 +69,7 @@ img {
 
 <div id="TOC">
 <ul>
-<li><a href="#basic-r-r-markdown-and-git">Basic R, R markdown, and git</a><ul>
-<li><a href="#r-markdown">R markdown</a></li>
-<li><a href="#git">git</a></li>
-</ul></li>
+<li><a href="#basic-r-r-markdown-and-git">Basic R, R markdown, and git</a></li>
 <li><a href="#data-manipulation-dplyr-related">Data manipulation (dplyr related)</a></li>
 <li><a href="#exploratory-data-analysis">Exploratory data analysis</a></li>
 <li><a href="#regression-and-statistical-inference">Regression and statistical inference</a></li>
