--- a/404.html
+++ b/404.html
@@ -1,9 +1,10 @@
 ---
-layout: page
-title: 404 Not Found
+layout: default
+title: "404: Page not found"
 permalink: 404.html
-hide: true
-share: false
 ---
 
-Sorry, the requested page wasn't found on the server.
+<div class="page">
+  <h1 class="page-title">404: Page not found</h1>
+  <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="{{ site.baseurl }}/">Head back home</a> to try finding it again.</p>
+</div>
