--- a/archive.html
+++ b/archive.html
@@ -16,7 +16,10 @@ title: Archive
   <ul class="past">
   {% endif %}
   {% endunless %}
-    <li><time>{{ post.date | date:"%d %b" }}</time> <a href="{{ post.url }}">{{ post.title }}</a></li>
+    <li> 
+      <time>{{ post.date | date:"%d %b" }}</time> 
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
 {% endfor %}
   </ul>
 </section>
