--- a/archive.html
+++ b/archive.html
@@ -16,9 +16,14 @@ title: Archive
   <ul class="past">
   {% endif %}
   {% endunless %}
+
     <li> 
+      <span style="float: left;">
       <time>{{ post.date | date:"%d %b" }}</time> 
+      </span>
+      <span style="float: right;">
       <a href="{{ post.url }}">{{ post.title }}</a>
+      </span>
     </li>
 {% endfor %}
   </ul>
